# spatter

./: README.md  __init__.py  pyproject.toml  spatter
libspatter/: __init__.py  spatter.py  taggr.py
src/spatter/: __init__.py  spatter  spatter.py  taggr.py
