[tool.poetry]
name = "spatter"
version = "0.1.5"
description = "tool used from the CLI or as a back-end to edit audio file names and metadata (tags)"
authors = ["Robert Allred <balinbob@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
mutagen = "^1.38"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
spatter = "spatter:main"
