[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "libspatter"
author = "Robert Allred"
author-email = "balinbob@gmail.com"
home-page = "https://github.com/balinbob/spatter"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

[tool.flit.scripts]
spatter = "spatter:main"

